--- a/frontend/src/pages/Items page/ItemCard.module.css
+++ b/frontend/src/pages/Items page/ItemCard.module.css
@@ -66,7 +66,7 @@ text-align: left;
  /* ----------- second attempt style ----------------- */
 .prdct_main{
   /* background-color: rgb(252, 230, 230); */
-  background-color: yellow;
+  /* background-color: yellow; */
   
 }
  .inpt_div{
@@ -113,13 +113,13 @@ text-align: left;
 
  .inpt_div button:hover{
   scale: 1.1;
-  transition: .4s;
+  transition:0.4s;
  }
 
  .ic_main{
    height:555px;
    width:100vw;
-   background-color: rgb(207, 250, 236);
+   /* background-color: rgb(250, 207, 207); */
    /* position: relative;
    top:-32px; */
    display: flex;
@@ -129,7 +129,7 @@ text-align: left;
  }
 
  .prdct_left{
-  background-color: rgb(255, 255, 255);
+  background-color: rgb(242, 249, 244);
   flex:2;
   height: 100%;
   border-radius: 30px;
@@ -143,10 +143,16 @@ text-align: left;
  .prdct_left img{
   width:300px;
   height:350px;
-  border:1px solid black;
+  border:3px solid rgb(255, 255, 255);
   /* margin-left: 60px; */
   border-radius: 5px;
   
+ }
+
+ .prdct_left img:hover{
+  transition: 0.4s ease-in-out;
+  filter:saturate(120%);
+  scale:1.05;
  }
  .prdct_head{
   text-align:right;
@@ -163,9 +169,18 @@ text-align: left;
 }
  .prdct_head h3{
   margin-top: 90px;
-  font-size: 2rem;
+  font-size: 2.9rem;
+  color:rgb(13, 194, 43)
  }
 
+ .prdct_head h3 span{
+  font-size: 1.2rem;
+ }
+
+ .prdct_head h4{
+  margin-top: 30px;
+  font-size: 1.9rem;
+ }
  .prdct_right{
   background-color: rgb(244, 250, 250);
   height: 100%;
@@ -176,21 +191,125 @@ text-align: left;
  }
 
  .item_desc{
-  display: flex;
+  /* display: flex;
   flex-direction: column;
-  
+   
+   */
+   padding: 20px 40px;
+   
+ }
+ 
+ .item_desc table, .item_desc tbody{
+   width:100%;
+ }
+
+ .item_desc table{
+ 
+ }
+
+ .item_desc table tbody tr{
+       width:100%;
+       height:70px;
+ }
+
+
+ .item_desc table tbody tr td{
+    width: 50%;
  }
  .right_des{
-  /* padding: 10px 20px; */
-  display: inline;
+  
  }
 
- .sp_left{
- 
+ .sp_up{
+  display: block;
  
  }
 
- .sp_right{
+ .sp_down{
   font-weight:700;
   font-size: 25px;
+  
  }
+
+ .i_count_div{
+  padding:30px 40px;
+ }
+
+ .fill1_div{
+    width:300px;
+    height:20px;
+    background-color:rgb(225, 227, 252);
+    border-radius: 20px;
+ }
+
+ .item_desc p{
+  margin-top: 60px;
+  font-size: 20px;
+ }
+
+ .item_desc p h5{
+  margin-top: 10px;
+  font-size: 22px;
+  color:rgb(10, 10, 115);
+ }
+
+ 
+
+ .btn_div{
+  margin-top: 150px;
+  width:100%;
+  display: flex;
+  justify-content: space-around
+ }
+
+.btn_updt{
+ width:150px;
+ height:50px;
+ font-weight:600;
+ font-size: 20px;
+ background-color: transparent;
+ color: rgb(26, 233, 29);
+ border: 2px solid rgb(83, 224, 86) ;
+ border-radius:5px;
+ /* background-color: rgb(16, 239, 79); */
+}
+
+.btn_dlt{
+ width:150px;
+ height:50px;
+ font-weight:600;
+ font-size: 20px;
+ background-color: transparent;
+ color: rgb(233, 74, 26);
+ border: 2px solid rgb(244, 60, 32) ;
+ border-radius:5px;
+}
+
+.btn_updt:hover{
+  background-color: rgb(26, 233, 29);
+  color:white;
+  transition: 0.4s;
+}
+
+.btn_dlt:hover{
+  background-color: rgb(233, 74, 26);
+  color:white;
+  transition: 0.4s;
+}
+
+/* 
+ .fill2_div{
+   opacity: 0;
+   
+   height:20px;
+
+
+   background-image: linear-gradient(to right, rgb(60, 53, 244) , rgb(44, 8, 245));
+   border-radius: 20px;
+ }
+
+ .fill2_div span{
+    position:relative;
+    top:-23px;
+    left:260px;
+ } */
